# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: main.yml  pyci-check.yml  pyci.yml
gendiff/: __init__.py  cli.py  data.py  dicts_diff.py  diff_with_formatter.py  engine.py  formatter.py  gendiff.py  parse.py  parser.py  tree.py
gendiff/file_processor/: data_loader.py  diff_assembler.py  file_handler.py  gendiff.py
gendiff/formaters/: __init__.py  json.py  plain.py  stylish.py
gendiff/formatters/: __init__.py  format_stylish.py  json.py  plain.py  stylish.py  tree_render.py
gendiff/scripts/: gendiff.py  run.py
tests/: __init__.py  conftest.py  test_cli.py  test_gendiff.py  test_generate_diff.py
tests/fixtures/: correct_result_tree_json.txt  file1.json  file1.yaml  file1.yml  file2.yaml  file2.yml  json  result.txt
tests/fixtures/diff_requests/: file2.yaml  file3.json  file4.json
tests/fixtures/diff_responses/: json_flat.txt  json_nested.txt
tests/test_formatters/: test_render_json.py  test_render_plain.py  test_render_stylish.py  test_render_stylish_plain.py
